--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,11 @@ serde = { version = "1.0", features = ["derive"] }
 num-bigint = { version = "0.4", features = ["serde"] }
 num-rational = { version = "0.4", features = ["serde"] }
 num-complex = { version = "0.4", features = ["serde"] }
-nalgebra = "0.32"
-rand = "0.8"
+nalgebra = { version = "0.32", features = ["serde-serialize"] }
+rand = { version = "0.8", features = ["std_rng"] }
+rand_distr = "0.4"
+rand_pcg = "0.3"
+ordered-float = "4.0"
 
 [dev-dependencies]
 criterion = "0.5"
